--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -17,6 +17,7 @@
     <string name="association_upcoming_events">Évenements à venir</string>
     <string name="association_go_back">Retour</string>
     <string name="association_see_more">Voir plus</string>
+    <string name="association_see_less">Voir moins</string>
     <string name="association_share">Partager l\'association</string>
     <string name="association_contact_members">Membres à contacter</string>
     <string name="association_help_us">
