--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="association_upcoming_events" translatable="true">Upcoming Events</string>
     <string name="association_go_back" translatable="true">Go Back</string>
     <string name="association_see_more" translatable="true">See More</string>
+    <string name="association_see_less" translatable="true">See Less</string>
     <string name="association_share" translatable="true">Share Association</string>
     <string name="association_edit" translatable="true">Edit Association</string>
     <string name="association_contact_members" translatable="true">Contact Members</string>
