--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -350,6 +350,8 @@
     <string name="user_claim_association_presidential_rights_wrong_code_error">Wrong code, please try again</string>
     <string name="user_claim_association_presidential_rights_verification_request_not_found">Verification request not found</string>
     <string name="user_claim_association_presidential_rights_service_unavailable">Service unavailable. Please try later</string>
+    <string name="user_claim_association_presidential_rights_verify_email">Verify Email</string>
+    <string name="user_claim_association_presidential_rights_enter_code_sent_to">Enter the code sent to</string>
 
     /**
     * Other
