--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -170,6 +170,7 @@
     <string name="event_card_content_description_not_saved_event">Not saved</string>
     <string name="event_card_content_description_association_logo">Association logo</string>
     <string name="event_card_interested_string">Interested</string>
+    <string name="event_card_content_description_edit_association">Edit event</string>
 
     <!-- Event Creation Strings -->
     <string name="event_creation_screen">Event creation</string>
