--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -232,6 +232,9 @@
     <string name="event_price_free">Free !</string>
     <string name="event_price">Entry: </string>
     <string name="event_places_remaining"> places remaining</string>
+    <string name="event_pictures_before_start_date">You have to wait for the event to start to upload pictures :)</string>
+    <string name="event_no_user_pictures">The event has no user pictures yet :/</string>
+    <string name="event_details_user_picture_content_description">A picture uploaded by a user</string>
 
     /**
     * package: explore
