chore: improve code quality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -249,6 +249,10 @@
     <string name="event_details_user_picture_content_description">A picture uploaded by a user</string>
     <string name="event_details_description_tab">Description</string>
     <string name="event_details_pictures_tab">Event pictures</string>
+    <string name="event_details_content_description_full_screen_picture">Full Screen Picture</string>
+    <string name="event_details_content_description_arrow_left">Arrow Left</string>
+    <string name="event_details_content_description_arrow_right">Arrow Right</string>
+
 
     /**
     * package: explore
