--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -440,6 +440,9 @@
     <string name="event_details_user_picture_content_description">Une photo téléchargée par un utilisateur</string>
     <string name="event_details_description_tab">Description</string>
     <string name="event_details_pictures_tab">Photos de l\'évènement</string>
+    <string name="event_details_content_description_full_screen_picture">Image en plein écran</string>
+    <string name="event_details_content_description_arrow_left">Flèche gauche</string>
+    <string name="event_details_content_description_arrow_right">Flèche droite</string>
 
     <!-- Bottom Navigation Strings -->
     <string name="bottom_nav_home">Accueil</string>
