--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -214,6 +214,9 @@
     <string name="event_creation_location_input_label">Enter an address</string>
     <string name="event_creation_location_dropdown_points">…</string>
     <string name="event_creation_location_dropdown_more">More…</string>
+    <string name="event_creation_content_description_clear_title">Clear title</string>
+    <string name="event_creation_content_description_clear_short_description">Clear short description</string>
+    <string name="event_creation_location_icon">Location icon</string>
 
     <!-- Event Edit Strings -->
     <string name="event_edit_title">Edit </string>
