--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -214,6 +214,7 @@
     <string name="event_creation_location_input_label">Enter an address</string>
     <string name="event_creation_location_dropdown_points">…</string>
     <string name="event_creation_location_dropdown_more">More…</string>
+    <string name="event_creation_name_error">Enter an event name</string>
 
     <!-- Event Edit Strings -->
     <string name="event_edit_title">Edit </string>
