--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -223,6 +223,8 @@
     <!-- Event Edit Component Strings -->
     <string name="event_edit_date_picker_desc">Sélectionner une date</string>
     <string name="event_edit_time_picker_desc">Sélectionner une heure</string>
+    <string name="event_edit_date_error">La date est manquante</string>
+    <string name="event_edit_time_error">L\'heure est manquante</string>
     <string name="event_edit_toast_more_button">Continuez à taper pour voir plus de résultats</string>
 
     <!-- Associations Overlay Strings -->
