chore: add content descriptions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -273,6 +273,8 @@
     <string name="event_details_content_description_full_screen_picture">Full Screen Picture</string>
     <string name="event_details_content_description_arrow_left">Arrow Left</string>
     <string name="event_details_content_description_arrow_right">Arrow Right</string>
+    <string name="event_details_content_description_like_picture">Icon to like the picture</string>
+    <string name="event_details_content_description_author_icon">Profile picture of the picture\'s author</string>
 
 
     /**
