--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -478,6 +478,8 @@
     <string name="event_details_content_description_full_screen_picture">Image en plein écran</string>
     <string name="event_details_content_description_arrow_left">Flèche gauche</string>
     <string name="event_details_content_description_arrow_right">Flèche droite</string>
+    <string name="event_details_content_description_like_picture">Bouton pour aimer la photo</string>
+    <string name="event_details_content_description_author_icon">Photo de profil de l\'auteur de la photo</string>
 
     <!-- Bottom Navigation Strings -->
     <string name="bottom_nav_home">Accueil</string>
